--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.3.1",
     "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
